--- a/.github/workflows/Doxigen_Documentation.yml
+++ b/.github/workflows/Doxigen_Documentation.yml
@@ -1,7 +1,10 @@
-name: Generate Doxygen Documentation
+name: Generate Doxygen Documentation and Unit Tests
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
 
@@ -9,24 +12,43 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write 
+      contents: write  # Needed for gh-pages deployment
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Install Doxygen
-      run: sudo apt-get install doxygen -y
+      # ----- INSTALLATION -----
+      - name: Install Doxygen
+        run: sudo apt-get install doxygen -y
 
-    - name : Install Dot
-      run : sudo apt-get install graphviz -y
+      - name: Install Graphviz (Dot)
+        run: sudo apt-get install graphviz -y
 
-    - name: Generate Documentation
-      run: doxygen config/Doxyfile
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.8
 
-    - name: Deploy Documentation
-    
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./documentation
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-html
+
+      # ----- TESTS UNITAIRES -----
+      - name: Run unit tests and generate HTML report
+        run: |
+          pytest test_calculatrice.py --html=report.html
+        env:
+          CI: true
+
+      # ----- DOXYGEN -----
+      - name: Generate Doxygen documentation
+        run: doxygen config/Doxyfile
+
+      # ----- DEPLOIEMENT -----
+      - name: Deploy Doxygen documentation to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./documentation
