--- a/.github/workflows/Doxigen_Documentation.yml
+++ b/.github/workflows/Doxigen_Documentation.yml
@@ -38,6 +38,7 @@ jobs:
       # ----- TESTS UNITAIRES -----
       - name: Run unit tests and generate HTML report
         run: |
+          pytest test_jeu.py --html=report.html
           pytest test_calculatrice.py --html=report.html
         env:
           CI: true
