--- a/.github/workflows/Doxigen_Documentation.yml
+++ b/.github/workflows/Doxigen_Documentation.yml
@@ -34,7 +34,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest pytest-html
-
+          
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flask flask-socketio pytest pytest-html
+          
       # ----- TESTS UNITAIRES -----
       - name: Run unit tests and generate HTML report
         run: |
